# simpletemplate

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
templates/: index.html
