[package]
name = "simpletemplate"
description = "HTML template engine."
authors = ["guiszk <guiszk@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/guiszk/simpletemplate"
repository = "https://github.com/guiszk/simpletemplate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
serde_json = "1.0"
string-join = "0.1.2"
